--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,18 @@ body {
 .columns {
   display: flex;
   margin: 1em;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+@media (max-width: 600px) {
+  .columns {
+    flex-direction: column;
+  }
+
+  .col {
+    width: 100%;
+  }
 }
 
 h1 {
@@ -38,16 +50,25 @@ p {
 }
 
 .col-1 {
-  width: 25%;
+  width: 20%;
 }
 
 .col-2 {
-  width: 50%;
+  width: 45%;
 }
 
 .col-3 {
-  width: 75%;
+  width: 70%;
 }
+
+@media (max-width: 600px) {
+  .col-1,
+  .col-2,
+  .col-3 {
+    width: 100%;
+  }
+}
+
 .col-right {
   background-color: #312614;
   padding: 0.5em;
